<resources>
    <string name="app_name">Daily Image</string>

    <string name="popular_images">Popular Images</string>
    <string name="latest_images">Latest Images</string>
    <string name="favorite_images">Favorite Images</string>
    <string name="search_images">Result for %s</string>
    <string name="username_format">\@%s</string>
    <string name="loading_preparing_data">Preparing the Data</string>
    <string name="loading_refresh_data">Updating Data</string>
    <string name="loading_more_data">Load More Data</string>

    <!-- Strings used for error message -->
    <string name="error_message_empty">Image is empty for now, you can do another thing.</string>
    <string name="error_message_server">Oops! Seems like some meteor hit the server.</string>
    <string name="error_message_network">There is problem with your connection, failed to get the image!</string>
    <string name="error_message_other">Something went wrong! Keep Calm.</string>

    <string name="retry">Retry</string>
    <string name="search_image_hint">Let\'s Search Some Image Here</string>

    <!-- Content desc -->
    <string name="content_desc_favorite_button">Favorite Button</string>
    <string name="content_desc_photo_image">Photo Image</string>
    <string name="content_desc_error_image">Error Image</string>

    <!-- Tab title -->
    <string name="tab_title_gallery">Gallery</string>
    <string name="tab_title_favorite">Favorite</string>
    <string-array name="home_tab_title">
        <item>@string/tab_title_gallery</item>
        <item>@string/tab_title_favorite</item>
    </string-array>
</resources>
