...
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">

    <ImageView
        android:id="@+id/error_image"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:contentDescription="@string/content_desc_error_image"
        app:srcCompat="@drawable/ic_baseline_hide_image_24"
        app:tint="?colorSecondary" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_16"
        android:layout_marginTop="@dimen/spacing_8"
        android:textAlignment="center"
        tools:text="Something Went Wrong" />

    <Button
        android:id="@+id/retry_button"
        android:layout_marginTop="@dimen/spacing_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry"/>
</LinearLayout>
